# android-jni

Demo/app/: build.gradle
Demo/app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp
JNICode/CcallJava/: settings.gradle
JNICode/CcallJava/app/: build.gradle
JNICode/CcallJava/app/src/main/: AndroidManifest.xml
JNICode/CcallJava/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JNICode/CcallJava/gradle/wrapper/: gradle-wrapper.properties
JNICode/Demo/: build.gradle
JNICode/Demo/app/: build.gradle
JNICode/Demo/app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp
JNICode/Temple/: settings.gradle
JNICode/Temple/app/: build.gradle
JNICode/Temple/gradle/wrapper/: gradle-wrapper.properties
JNICode/ativity-native/: .gitignore  settings.gradle
JNICode/ativity-native/app/src/main/: AndroidManifest.xml
JNICode/ativity-native/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JNICode/hello-libs/: settings.gradle
JNICode/hello-libs/app/: build.gradle
JNICode/hello-libs/app/src/main/: AndroidManifest.xml
JNICode/hello-libs/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JNICode/hello-media/: settings.gradle
JNICode/hello-media/app/: build.gradle
JNICode/hello-media/app/src/main/: AndroidManifest.xml
JNICode/hello-media/app/src/main/cpp/: CMakeLists.txt  android_fopen.cpp  android_fopen.h  media_demo.cpp  native_media_jni.cpp
JNICode/native-media/: local.properties
NDKDemo/: settings.gradle
NDKDemo/app/: build.gradle
NDKDemo/app/src/main/: AndroidManifest.xml
NDKDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NDKDemo/gradle/wrapper/: gradle-wrapper.properties
NDKDemo/javaCallC/: build.gradle
NDKDemo/javaCallC/src/main/: AndroidManifest.xml
NDKDemo/javaCallC/src/main/cpp/: CMakeLists.txt  native.cpp  native.h
c code/: Demo01.c  Demo01.dev  Makefile.win  main.cpp  shuruhanshu.c  zhizhen.c
c code/C++/CDemo02/: CDemo02.sln
c code/C++/CDemo02/CDemo02/: CDemo02.cpp  CDemo02.vcxproj  CDemo02.vcxproj.filters
c code/C++/CDemo02/CDemo02/Debug/: CDemo02.exe.recipe  CDemo02.ilk  vc142.idb
c code/Demo/ConsoleApplication1/: ConsoleApplication1.sln
c code/Demo/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj
c code/Demo/ConsoleApplication1/ConsoleApplication1/Debug/: vc142.idb
c code/Demo01/: App01.c  Demo01.dev  Demo01.layout  Demo02.c  Makefile.win
c code/Demo02/: App.dev  Demo02.cpp  DemoApp.c  Makefile.win  gmon.out  main.c  meth.c
c code/LearnC/: LearnC.sln
c code/LearnC/LearnC/: LearnC.vcxproj
c code/LearnC/LearnC/Debug/: vc142.idb
c code/LearnC/LearnC/Debug/LearnC.tlog/: LearnC.lastbuildstate
c code/Project1/: Project1.sln
c code/Project1/Project1/: Helloworld.c  Project1.vcxproj  Project1.vcxproj.filters  zhizhen.c
c code/Project1/Project1/Debug/: Project1.exe.recipe  Project1.ilk  vc142.idb
c code/Project1/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
c code/Project2/: Project2.sln
c code/Project2/Project2/: Demo.c  Project2.vcxproj  Project2.vcxproj.filters
c code/Project2/Project2/Debug/: vc142.idb
c code/Project2/Project2/Debug/Project2.tlog/: Project2.lastbuildstate
c code/chapter01/Example01/: Demo.c
c code/chapter02/Example/: Demo01.c  Demo02.c  Demo03.c
cmakedemo/: CMakeLists.txt
cmakedemo/cmakedemo/: CMakeLists.txt  cmakedemo.cpp  cmakedemo.h
doc/: 1.Jni第一节.md  1.第一个jni程序.md  2.jni第二节.md  3.从头开始创建.md  4.线程的使用.md  5.c调用java，java调用c.md
(+33 files in other folders)
